[gd_scene load_steps=7 format=3 uid="uid://lk3vlfi3pibn"]

[ext_resource type="Script" path="res://scripts/options.gd" id="1_vanp1"]
[ext_resource type="Texture2D" uid="uid://dix5ly0lc1ri2" path="res://assets/texture/checkbox_checked.png" id="2_idtol"]
[ext_resource type="FontFile" uid="uid://gs1cj3fb6dcd" path="res://assets/fonts/EBGaramond-Bold.ttf" id="2_nmvt0"]
[ext_resource type="Texture2D" uid="uid://brfh1caydunp7" path="res://assets/texture/checkbox.png" id="3_1nupn"]
[ext_resource type="Texture2D" uid="uid://xtpp3d5rbmap" path="res://assets/texture/close.png" id="5_pjp6g"]

[sub_resource type="Theme" id="Theme_4avlr"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vanp1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -768.0
offset_top = -411.0
offset_right = 768.0
offset_bottom = 420.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2484, 0.2484, 0.2484, 1)

[node name="VolumeSlider" type="HSlider" parent="."]
layout_mode = 0
offset_top = -196.0
offset_right = 576.0
offset_bottom = -180.0
theme = SubResource("Theme_4avlr")
value = 100.0

[node name="VolumeLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = -584.0
offset_top = -228.0
offset_right = -256.0
offset_bottom = -148.0
theme_override_fonts/normal_font = ExtResource("2_nmvt0")
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "[center]Volume[/center]"

[node name="Fullscreen" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = -576.0
offset_top = -100.0
offset_right = -256.0
offset_bottom = -20.0
theme_override_fonts/normal_font = ExtResource("2_nmvt0")
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "[center]Fullscreen[/center]"

[node name="FullscreenToggle" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 259.0
offset_top = -89.0
offset_right = 317.0
offset_bottom = -31.0
theme_override_icons/checked = ExtResource("2_idtol")
theme_override_icons/unchecked = ExtResource("3_1nupn")

[node name="Close" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = 228.0
offset_right = 32.0
offset_bottom = 292.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("5_pjp6g")

[connection signal="value_changed" from="VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="toggled" from="FullscreenToggle" to="." method="_on_fullscreen_toggle_toggled"]
[connection signal="pressed" from="Close" to="." method="_on_close_pressed"]
